# developer-tools

./: .gitignore  .justfile  Cargo.toml  TODO.md
.github/workflows/: release.yaml
resource/: abbr.fish  config.fish  functions.fish  local.fish
resource/fish/: abbr.fish  config.fish  functions.fish
resource/ideavim/: .ideavimrc
resource/starship/: starship.toml
src/: cli.rs  installers.rs  main.rs  traces.rs  utils.rs
src/commands/: aliases.rs  bootstrap.rs  completions.rs  git.rs  init.rs  install.rs  mod.rs  rd.rs
src/install/: installer.rs  mod.rs
src/install/homebrew/: command.rs  mod.rs  package.rs
src/install/installers/: docker.rs  fonts.rs  homebrew.rs  k9s.rs  kind.rs  kubernetes.rs  mod.rs  neovim.rs  tilt.rs  wezterm.rs  xcode_cli_tools.rs
src/system/: cargo.rs  docker.rs  fish.rs  git.rs  group.rs  homebrew.rs  ideavim.rs  installable.rs  mod.rs  nix.rs  registry.rs  starship.rs
