[package]
name = "d"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
clap_complete = "4.5.2"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
dirs = "5.0.1"
log = "0.4.21"
once_cell = "1.19.0"
globset = "0.4.14"
walkdir = "2.5.0"
